componente likes and debounce

--- a/package.json
+++ b/package.json
@@ -12,10 +12,20 @@
   "dependencies": {
     "@astrojs/check": "^0.9.4",
     "@astrojs/cloudflare": "^11.2.0",
+    "@astrojs/db": "^0.14.3",
     "@astrojs/mdx": "^3.1.8",
     "@astrojs/rss": "^4.0.9",
     "@astrojs/sitemap": "^3.2.1",
+    "@astrojs/vue": "^4.5.2",
+    "@libsql/client": "^0.14.0",
     "astro": "^4.16.7",
-    "typescript": "^5.6.3"
+    "canvas-confetti": "^1.9.3",
+    "lodash.debounce": "^4.0.8",
+    "typescript": "^5.6.3",
+    "vue": "^3.5.12"
+  },
+  "devDependencies": {
+    "@types/canvas-confetti": "^1.6.4",
+    "@types/lodash.debounce": "^4.0.9"
   }
 }
